# low_level_rust

./: LICENSE  README.md
bare_metal/: 01_freestanding_rust_binary.md  03_vga_text_mode.md  04_ Testing.md  Cargo.toml  arm-bare_metal.json  freestanding_rust_binary.md  minimal_rust_kernel.md
bare_metal/.cargo/: config.toml
bare_metal/src/: lib.rs  main.rs  vga_buffer.rs
bare_metal/test/: basic_boot.rs
embedded_rust_book/: Cargo.toml  Notes.md
micro_bit_v2/: Cargo.toml  Embed.toml  build.rs  memory.x  notes.md
micro_bit_v2/src/: blinking_arrows.rs  button.rs  button_a_on_off.rs  delay-print.rs  directional_arrow_solution.rs  directional_arrows.rs  light-it-up.rs  light_it_all.rs  light_it_up.rs  main.rs  polling.rs  roulette.rs  spin-wait.rs
