[package]
name = "bare_metal"
version = "0.1.0"
edition = "2024"

[dependencies]
#bootloader = "0.11.13"
bootloader = "0.9"

#volatile = "0.6.1"
volatile = "0.2.6"
spin = "0.5.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bin]]
name = "bare_metal"
test = true
bench = false


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]